core/bench/benchwithzlink/baseline/zlink_dist/linux-x64/include/zlink.h

/******************************************************************************/
/*  0MQ message definition.                                                   */
/******************************************************************************/
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
/** @brief Connect to a peer node's PUB endpoint (mesh topology). */
ZLINK_EXPORT int zlink_spot_node_connect_peer_pub (void *node,
                                               const char *peer_pub_endpoint);
/** @brief Disconnect from a peer node's PUB endpoint. */
ZLINK_EXPORT int zlink_spot_node_disconnect_peer_pub (
  void *node, const char *peer_pub_endpoint);
/**
 * @brief Register this node as a SPOT service with the Registry.
 * @param service_name        Service (group) name.
 * @param advertise_endpoint  Endpoint peers will connect to.
 */
ZLINK_EXPORT int zlink_spot_node_register (void *node,
                                       const char *service_name,
                                       const char *advertise_endpoint);
/** @brief Unregister this node from the Registry. */
ZLINK_EXPORT int zlink_spot_node_unregister (void *node,
                                         const char *service_name);
/**
 * @brief Attach a Discovery instance for automatic peer connection.
 * @param discovery     Discovery handle (must be ZLINK_SERVICE_TYPE_SPOT).
 * @param service_name  Service name to watch for peer discovery.
 */
ZLINK_EXPORT int zlink_spot_node_set_discovery (void *node,
                                            void *discovery,
                                            const char *service_name);
/** @brief Set TLS server certificate for the node. */
ZLINK_EXPORT int zlink_spot_node_set_tls_server (void *node,
                                             const char *cert,
                                             const char *key);
/** @brief Set TLS client settings for the node. */
ZLINK_EXPORT int zlink_spot_node_set_tls_client (void *node,
                                             const char *ca_cert,
                                             const char *hostname,
                                             int trust_system);
/**
 * @brief Set an option on SPOT node internals.
 *
 * Use `ZLINK_SPOT_NODE_SOCKET_NODE` for node-level options
 * (`ZLINK_SPOT_NODE_OPT_*`) and `ZLINK_SPOT_NODE_SOCKET_*` for
 * underlying socket options.
 */
ZLINK_EXPORT int zlink_spot_node_setsockopt (void *node,
                                             int socket_role,
                                             int option,
                                             const void *optval,
                                             size_t optvallen);
/* SPOT Pub (default thread-safe) ------------------------------------------ */

/** @brief Create a thread-safe SPOT publisher attached to the given node. */
ZLINK_EXPORT void *zlink_spot_pub_new (void *node);
/** @brief Destroy a SPOT publisher. */
ZLINK_EXPORT int zlink_spot_pub_destroy (void **pub_p);
/**
 * @brief Publish a multipart message under a topic.
 *
 * Thread-safe:
 * - SYNC mode (default): concurrent calls are serialized internally.
 * - ASYNC mode: calls enqueue into an internal queue and return on enqueue.
 *
 * ASYNC mode can return EAGAIN when the queue is full and the queue-full
 * policy is ZLINK_SPOT_NODE_PUB_QUEUE_FULL_EAGAIN.
 *
 * @param topic_id    Topic identifier string.
 * @param parts       Multipart message array.
 * @param part_count  Number of parts.
 * @param flags       Send flags (typically 0).
 */
ZLINK_EXPORT int zlink_spot_pub_publish (void *pub,
                                         const char *topic_id,
                                         zlink_msg_t *parts,
                                         size_t part_count,
                                         int flags);
/* SPOT Sub ---------------------------------------------------------------- */

/**
 * @brief Callback function type for SPOT subscriber handler dispatch.
 *
 * When set via zlink_spot_sub_set_handler(), incoming messages are
 * automatically delivered through this callback instead of zlink_spot_sub_recv().
 *
 * @param topic       Topic string.
 * @param topic_len   Topic string length.
 * @param parts       Multipart message array (read-only).
 * @param part_count  Number of parts.
 * @param userdata    User-provided context pointer.
 */
typedef void (*zlink_spot_sub_handler_fn) (const char *topic,
                                           size_t topic_len,
                                           const zlink_msg_t *parts,
                                           size_t part_count,
                                           void *userdata);
/** @brief Create a SPOT subscriber attached to the given node. */
ZLINK_EXPORT void *zlink_spot_sub_new (void *node);
/** @brief Destroy a SPOT subscriber. */
ZLINK_EXPORT int zlink_spot_sub_destroy (void **sub_p);
/** @brief Subscribe to an exact topic. */
ZLINK_EXPORT int zlink_spot_sub_subscribe (void *sub, const char *topic_id);
/** @brief Subscribe to a topic pattern (prefix match). */
ZLINK_EXPORT int zlink_spot_sub_subscribe_pattern (void *sub, const char *pattern);
/** @brief Unsubscribe from a topic or pattern. */
ZLINK_EXPORT int zlink_spot_sub_unsubscribe (void *sub,
                                             const char *topic_id_or_pattern);
/**
 * @brief Set a callback handler for automatic message dispatch.
 *
 * When a handler is set, messages are delivered via the callback
 * and zlink_spot_sub_recv() must not be used concurrently.
 * Pass NULL to clear the handler and revert to recv()-based consumption.
 * Returns EBUSY if recv() is currently in progress on the same subscriber.
 *
 * @param handler   Callback function, or NULL to clear.
 * @param userdata  User-provided context pointer passed to the callback.
 */
ZLINK_EXPORT int zlink_spot_sub_set_handler (void *sub,
                                             zlink_spot_sub_handler_fn handler,
                                             void *userdata);
/**
 * @brief Receive a message from the subscriber (polling mode).
 * @param[out] parts         Received multipart message (caller must free).
 * @param[out] part_count    Number of parts.
 * @param flags              0 or ZLINK_DONTWAIT.
 * @param[out] topic_id_out  Topic string buffer.
 * @param[in,out] topic_id_len  On input, buffer size; on output, actual length.
 *
 * Concurrent calls on the same subscriber are rejected with EBUSY.
 */
ZLINK_EXPORT int zlink_spot_sub_recv (void *sub,
                                      zlink_msg_t **parts,
                                      size_t *part_count,
                                      int flags,
                                      char *topic_id_out,
                                      size_t *topic_id_len);
/******************************************************************************/
/*  Atomic utility methods                                                    */
/******************************************************************************/

/** @brief Create a new atomic counter, initialized to zero. */
ZLINK_EXPORT void *zlink_atomic_counter_new (void);
void zlink_atomic_counter_set (void *counter_, int value_);
int zlink_atomic_counter_inc (void *counter_);
int zlink_atomic_counter_dec (void *counter_);
int zlink_atomic_counter_value (void *counter_);
void zlink_atomic_counter_destroy (void **counter_p_);
/******************************************************************************/
/*  Scheduling timers                                                         */
/******************************************************************************/
typedef void (zlink_timer_fn) (int timer_id, void *arg);
/** @brief Create a new timer set. */
ZLINK_EXPORT void *zlink_timers_new (void);
/** @brief Destroy a timer set and release all resources. */
ZLINK_EXPORT int zlink_timers_destroy (void **timers_p);
/** @brief Add a timer with the given interval (ms) and callback. Returns timer ID. */
ZLINK_EXPORT int
zlink_timers_add (void *timers, size_t interval, zlink_timer_fn handler, void *arg);
/** @brief Cancel a timer by its ID. */
ZLINK_EXPORT int zlink_timers_cancel (void *timers, int timer_id);
/** @brief Change the interval of an existing timer. */
ZLINK_EXPORT int
zlink_timers_set_interval (void *timers, int timer_id, size_t interval);
/** @brief Reset a timer's countdown to its full interval. */
ZLINK_EXPORT int zlink_timers_reset (void *timers, int timer_id);
/** @brief Return milliseconds until the next timer fires, or -1 if none. */
ZLINK_EXPORT long zlink_timers_timeout (void *timers);
/** @brief Execute all expired timers. */
ZLINK_EXPORT int zlink_timers_execute (void *timers);
/** @brief Start a high-resolution stopwatch. Returns an opaque handle. */
ZLINK_EXPORT void *zlink_stopwatch_start (void);
/** @brief Return elapsed microseconds without stopping the stopwatch. */
ZLINK_EXPORT unsigned long zlink_stopwatch_intermediate (void *watch_);
/** @brief Stop the stopwatch and return total elapsed microseconds. */
ZLINK_EXPORT unsigned long zlink_stopwatch_stop (void *watch_);
typedef void (zlink_thread_fn) (void *);