bindings/dotnet/src/Zlink/Native/NativeMethods.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_connect_peer_pub(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string peerPubEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_disconnect_peer_pub(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string peerPubEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_register(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string advertiseEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_unregister(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_set_discovery(IntPtr node,
        IntPtr discovery, [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_set_tls_server(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string cert,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_set_tls_client(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string caCert,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hostname, int trustSystem);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_setsockopt(IntPtr node, int role,
        int option, IntPtr value, nuint length);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_spot_node_pub_socket_unsafe(IntPtr node);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_spot_node_sub_socket_unsafe(IntPtr node);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_pub_peers(IntPtr node,
        [In, Out] ZlinkPeerInfo[] peers, ref nuint count);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_node_pub_peers",
        CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_pub_peers(IntPtr node,
        IntPtr peers, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_sub_peers(IntPtr node,
        [In, Out] ZlinkPeerInfo[] peers, ref nuint count);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_node_sub_peers",
        CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_sub_peers(IntPtr node,
        IntPtr peers, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_spot_pub_new(IntPtr node);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_pub_destroy(ref IntPtr pub);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_pub_publish(IntPtr pub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId,
        [In] ZlinkMsg[] parts, nuint partCount, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_pub_publish",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_spot_pub_publish(IntPtr pub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId,
        ZlinkMsg* parts, nuint partCount, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_pub_publish",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_spot_pub_publish(IntPtr pub,
        byte* topicId, ZlinkMsg* parts, nuint partCount, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_pub_publish_bytes(IntPtr pub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId,
        IntPtr data, nuint size, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_pub_publish_bytes",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_spot_pub_publish_bytes(IntPtr pub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId,
        byte* data, nuint size, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_pub_publish_bytes",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_spot_pub_publish_bytes(IntPtr pub,
        byte* topicId, byte* data, nuint size, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_spot_sub_new(IntPtr node);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_sub_destroy(ref IntPtr sub);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_sub_subscribe(IntPtr sub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_sub_subscribe_pattern(IntPtr sub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_sub_unsubscribe(IntPtr sub,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicIdOrPattern);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe int zlink_spot_sub_set_handler(IntPtr sub,
        ZlinkSpotSubHandlerDelegate? handler, IntPtr userData);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_spot_sub_recv(IntPtr sub,
        out IntPtr parts, out nuint partCount, int flags, byte* topicId,
        ref nuint topicIdLen);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_atomic_counter_new();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void zlink_atomic_counter_set(IntPtr counter,
        int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_atomic_counter_inc(IntPtr counter);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_atomic_counter_dec(IntPtr counter);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_atomic_counter_value(IntPtr counter);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void zlink_atomic_counter_destroy(ref IntPtr counter);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_timers_new();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timers_destroy(ref IntPtr timers);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timers_add(IntPtr timers, nuint interval,
        ZlinkTimerDelegate handler, IntPtr arg);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timers_cancel(IntPtr timers, int timerId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timers_set_interval(IntPtr timers,
        int timerId, nuint interval);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timers_reset(IntPtr timers, int timerId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long zlink_timers_timeout(IntPtr timers);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timers_execute(IntPtr timers);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_stopwatch_start();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong zlink_stopwatch_intermediate(IntPtr watch);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong zlink_stopwatch_stop(IntPtr watch);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_thread_start(ZlinkThreadDelegate func,
        IntPtr arg);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void zlink_thread_join(IntPtr thread);

}
